[package]
name = "albion-network"
version = "1.0.1"
edition = "2021"
authors = ["zMarques"]
description = "A simple decoder for Albion Online Packet"
license = "MIT"
include = ["**/*.rs", "Cargo.toml", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.20"
photon_decode = "0.2.1"
pnet = "0.35.0"
